# cpp-sandbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DecoratorSample.cpp  FactoryMethod.cpp  README.md  String.cpp  WeightedAverageCalculator.cpp  WeightedAverageCalculatorTemplate.h  const.cpp  const.h  constructor.cpp  fixed-string.cpp  googletest.cpp  int_min.cpp  negative_float_cast_to_unsigned.cpp  pointer.cpp  strtol.cpp  void_pointer.cpp
Integrator/: Integrator_test.cpp  Integrator_test_fixture.cpp
mock_trial/: ISample.h  SampleConcrete.cpp
src/: AdapterSample.cpp  NamedConstructor.cpp  class_array.cpp  const_float_in_class.cpp  const_struct.cpp  constructor2.cpp  default-constructor.cpp  googletest.cpp  initializer.cpp  lvalue.cpp  matrix.cpp  minidx.cpp
src/Integrator/: Integrator.cpp  Integrator.h  Integrator_test_global.cpp
src/mock_trial/: SampleConcrete.h  unittestFakeIt.cpp
